2004-06-05  Thomas Vander Stichele  <thomas (at) apestaart (dot) org>

	* configure.ac:
	  bump nano to cvs

=== release 0.8.3 ===

2004-06-05  Thomas Vander Stichele  <thomas at apestaart dot org>

	* configure.ac:
	  update libtool versioning
	  do a new release
	* docs/gst/tmpl/gstelement.sgml:
	* docs/gst/tmpl/gsttypes.sgml:
	* gst/gstinfo.c: (_gst_debug_init):
	  put back GST_CAT_DATAFLOW to fix API breakage

2004-06-04  David Schleef  <ds@schleef.org>

	* autogen.sh: Add a temporary 'env' to test buildbot problems.

2004-06-04  Thomas Vander Stichele  <thomas (at) apestaart (dot) org>

	* configure.ac:
	  bump nano to cvs

=== release 0.8.2 ===

2004-06-03  Thomas Vander Stichele  <thomas at apestaart dot org>

	* gst/gst.c: (parse_debug_list), (gst_init_check_with_popt_table):
	  check GST_DEBUG environment variable which is parsed the same way
	  as --gst-debug=

2004-05-28  Stephane Loeuillet <stephane.loeuillet@tiscali.fr>

	* gst/elements    : gstaggregator.c gstfakesink.c gstfakesrc.c
			    gstmd5sink.c gstshaper.c gsttee.c
			    gsttypefindelement.c
	* gst/schedulers  : gstbasicscheduler.c gstoptimalscheduler.c

	  - removing trailing commas at end of enums
	    it is correct C99 code but C90 compilers would complain
	    (AIX, Forte, ...)
	    ('should' fix #143290, at least partially)

2004-05-27  Wim Taymans  <wim@fluendo.com>

	* gst/schedulers/gstoptimalscheduler.c: (remove_from_chain),
	(chain_group_set_enabled), (create_group), (add_to_group),
	(merge_groups), (setup_group_scheduler), (group_elements),
	(gst_opt_scheduler_iterate), (gst_opt_scheduler_show):
	Don't try to follow the pad connections with other groups
	when a loop based element is added to the scheduler because
	the bin will inform the scheduler about the pad links a little
	later.

2004-05-27  Wim Taymans  <wim@fluendo.com>

	* gst/schedulers/gstoptimalscheduler.c: (add_to_chain),
	(remove_from_chain), (chain_group_set_enabled),